--- a/code/src/templates/index.html
+++ b/code/src/templates/index.html
@@ -21,12 +21,12 @@
     <form id="uploadForm">
         <p align="left"><b>Upload email/pdf/img file for classification</b></p>
       <div class="upload-row">
-        <input type="file" name="email_file" id="email_file" required>
-        <label class="button-class" for="email_file">Upload File</label>
+        <input type="file" name="email_file" id="email_file" display="none">
+        <label class="button-class" for="email_file">Upload</label>
         <p id="fileName" class="file-name">No file chosen</p>
       </div>
 
-            <button class="button-class" type="submit"><i class="fas fa-upload"></i> Analyze</button>
+            <button class="button-class" type="submit"><i class="fas fa-upload"></i> Examine</button>
 
     </form>
 
@@ -145,7 +145,7 @@ function applyTabState() {
               )
   .join("");
           resultsDiv.innerHTML = `
-            <h2>Classified Results</h2>
+            <h2>Stratified Insights</h2>
             <h3><p><strong>Request Type:</strong> ${data.requestType}</p>
              <p><strong>Sub-Request Type:</strong> ${data.subRequestType}
             </p></h3>
